--- a/res/layout-v21/activity_tour.xml
+++ b/res/layout-v21/activity_tour.xml
@@ -81,8 +81,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/accentColor"
                 android:gravity="center"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textSize="14sp"/>
 
             <TextView
                 android:id="@+id/button_register_tour"
@@ -90,8 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/accentColor"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textSize="14sp"/>
         </LinearLayout>
     </LinearLayout>
 
