Task #2724 - Revamping of the Content Provider for Lollipop

--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -42,6 +42,24 @@
     	<item name="android:windowTranslucentStatus">false</item>
     </style>
     
+   <style name="provider_activity" parent="Theme.AppCompat.Light.NoActionBar">
+        
+        <!-- colorPrimary is used for the default action bar background -->
+        <item name="colorPrimary">@color/lollipop_primary_color</item>
+ 
+        <!-- colorPrimaryDark is used for the status bar -->
+        <item name="colorPrimaryDark">@color/lollipop_dark_primary_color</item>
+ 
+        <!-- colorAccent is used as the default value for colorControlActivated
+             which is used to tint widgets -->
+
+        <item name="colorAccent">@color/accentColor</item>
+        
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    	<item name="android:statusBarColor">@color/lollipop_dark_primary_color</item>
+    	<item name="android:windowTranslucentStatus">false</item>
+    </style>
+    
     <style name="NavDrawerAccountInfoText">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
