--- a/res/layout-v21/activity_file_explorer.xml
+++ b/res/layout-v21/activity_file_explorer.xml
@@ -1,9 +1,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FileProviderActivity" >
+    tools:context=".FileProviderActivityLollipop"
+    android:fitsSystemWindows="true" >
+    
+    <android.support.v7.widget.Toolbar
+		    android:id="@+id/toolbar_provider"
+		    android:layout_width="match_parent"
+		    android:layout_height="?attr/actionBarSize"
+		    android:background="?attr/colorPrimary"
+		    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+		    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+		    tools:context=".FileProviderActivityLollipop"/>
 
     <RelativeLayout
         android:id="@+id/file_explorer_toolbar"
