--- a/res/layout-v21/tab_layout.xml
+++ b/res/layout-v21/tab_layout.xml
@@ -4,13 +4,12 @@
     android:layout_height="wrap_content"    
     android:background="@drawable/tab_indicator" 
     android:orientation="vertical">
-
+    
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/tab_text_color"
-        android:textStyle="normal"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:layout_gravity="center_horizontal" />
-
 </LinearLayout>
