--- a/res/layout-v21/activity_file_provider.xml
+++ b/res/layout-v21/activity_file_provider.xml
@@ -8,7 +8,7 @@
     tools:context=".FileProviderActivityLollipop" >
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_explorer"
+        android:id="@+id/toolbar_provider"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
@@ -17,10 +17,10 @@
         tools:context=".FileProviderActivityLollipop" />
 
     <TabHost
-        android:id="@+id/tabhost_explorer"
+        android:id="@+id/tabhost_provider"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_explorer" >
+        android:layout_below="@id/toolbar_provider" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +41,7 @@
                 android:layout_weight="0" />
 
             <android.support.v4.view.ViewPager
-                android:id="@+id/explorer_tabs_pager"
+                android:id="@+id/provider_tabs_pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
