--- a/res/layout-v21/fragment_contact_properties.xml
+++ b/res/layout-v21/fragment_contact_properties.xml
@@ -1,13 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:background="@color/black"
-    tools:context=".FilePropertiesFragment" >
-    
-    <!--  
+    android:background="@color/white"
+    android:orientation="vertical"
+    tools:context=".ContactPropertiesFragment" >
+
+    <!--
     <RelativeLayout 
         android:layout_width="fill_parent"
         android:layout_height="48dp"
@@ -35,16 +36,40 @@
             android:layout_marginRight="5dp"
             style="@style/dialogActionButton"/>
      
-    </RelativeLayout>-->
+    </RelativeLayout>
+    -->
     
     <RelativeLayout 
-        android:id="@+id/contact_properties_avatar_layout"
-        android:layout_width="fill_parent"
+        android:id="@+id/contact_image_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    <nz.mega.android.utils.FixedCenterCrop
+        android:id="@+id/contact_properties_image"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp">
-    <!--  
+        android:scaleType="centerCrop" />
+    
+         <TextView
+         android:id="@+id/contact_properties_name"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:gravity="center"
+         android:textColor="@color/white"
+         android:layout_alignBottom="@+id/contact_properties_image"
+         android:textSize="20sp"
+         android:textStyle="bold" />    
+    
+    </RelativeLayout>
+    
+    <!--
+    	<TextView
+            android:id="@+id/contact_properties_initial_letter"
+            android:layout_width="fill_parent"
+   			android:layout_height="fill_parent"
+			android:gravity="center_horizontal|center_vertical"
+   			android:paddingBottom="5dp" />
+	    
 	    <ImageView
 	        android:id="@+id/contact_properties_image"
 			android:layout_width="fill_parent"
@@ -53,73 +78,67 @@
 	        android:paddingBottom="10dp"
 	        android:paddingLeft="30dp"
 	        android:paddingRight="30dp"
-	        android:paddingTop="10dp"/>-->
-	        
-	    
-	    <nz.mega.android.utils.FixedCenterCrop
-		    android:id="@+id/contact_properties_image"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_centerInParent="true"
-		    android:scaleType="centerCrop" />
-		    
-    	<TextView
-            android:id="@+id/contact_properties_initial_letter"
-            android:layout_width="fill_parent"
-   			android:layout_height="fill_parent"
-   			android:layout_centerInParent="true"
-			android:gravity="center_horizontal|center_vertical"
-   			android:paddingBottom="5dp" />
-	    
-    </RelativeLayout>
+	        android:paddingTop="10dp"/>
+    -->
 
-    <TableLayout
-        android:id="@+id/contact_properties_content_table"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/contact_properties_avatar_layout"
-        android:background="@color/black" >
-
-        <TableRow>
-
-           <TextView
-              android:id="@+id/contact_properties_name"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:paddingTop="25dp"
-              android:textSize="20sp"
-              android:gravity="center"
-              android:textColor="@color/white" 
-             android:textStyle="bold" />
-            
-        </TableRow>
-
-        <TableRow>
-
-            <TextView
-                android:id="@+id/contact_properties_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="35dp" 
-                android:gravity="center"               
-                android:textColor="@color/white"/>
-        </TableRow>
-
-    </TableLayout>
-
-    <Button
-        android:id="@+id/shared_folders_button"
+    <LinearLayout
+        android:id="@+id/contact_email_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center"
-        android:background="@drawable/btn_shared_folder_holo_light"
-        android:text="@string/menu_add_contact"
-        android:textColor="@color/black" >
-    </Button>
-    
-   <!--   
+        android:background="@color/orange"
+        android:gravity="left"
+        android:orientation="horizontal" >
+
+     <ImageView
+            android:id="@+id/contact_email_icon"
+            style="@style/dialogActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_share" />               
+
+
+        <TextView
+            android:id="@+id/contact_properties_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+           	android:layout_gravity="center_horizontal"
+            android:textColor="@color/file_properties_info_menu" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/shared_folders_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/orange"
+        android:gravity="left"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/shared_folder_icon"
+            style="@style/dialogActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_share" />
+
+        <TextView
+            android:id="@+id/shared_folders_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/section_shared_items"
+            android:textColor="@color/file_properties_info_menu"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/shared_folders_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="left"
+            android:textColor="@color/accentColor" />
+    </LinearLayout>
+
+    <!--
    <RelativeLayout  
 			android:layout_width="200dp"
 			android:layout_height="wrap_content"
@@ -137,7 +156,7 @@
 			android:layout_marginLeft="0dp"
 			android:background="#00000000"
 			/>            
-	</RelativeLayout>-->
-    
+	</RelativeLayout>
+    -->
 
-</RelativeLayout>
+</LinearLayout>
