--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -80,5 +80,11 @@
          <item name="android:minHeight">8dp</item>
          <item name="android:maxHeight">8dp</item>
 	</style>
+	
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/accentColor</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:background">@color/white</item>
+    </style>
     
 </resources>
