--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -13,6 +13,7 @@
         <!-- colorAccent is used as the default value for colorControlActivated
              which is used to tint widgets -->
         <item name="colorAccent">@color/accentColor</item>
+        <item name="colorControlNormal">@color/text_secondary</item>
         
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     	<item name="android:statusBarColor">@android:color/transparent</item>
@@ -21,43 +22,6 @@
         <!-- You can also set colorControlNormal, colorControlActivated
              colorControlHighlight & colorSwitchThumbNormal. -->
         
-    </style>
-    
-    <style name="login_activity" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowNoTitle">true</item>
-        
-        <!-- colorPrimary is used for the default action bar background -->
-        <item name="colorPrimary">@color/lollipop_primary_color</item>
- 
-        <!-- colorPrimaryDark is used for the status bar -->
-        <item name="colorPrimaryDark">@color/lollipop_dark_primary_color</item>
- 
-        <!-- colorAccent is used as the default value for colorControlActivated
-             which is used to tint widgets -->
-
-        <item name="colorAccent">@color/accentColor</item>
-        
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-    	<item name="android:statusBarColor">@color/lollipop_dark_primary_color</item>
-    	<item name="android:windowTranslucentStatus">false</item>
-    </style>
-    
-   <style name="provider_activity" parent="Theme.AppCompat.Light.NoActionBar">
-        
-        <!-- colorPrimary is used for the default action bar background -->
-        <item name="colorPrimary">@color/lollipop_primary_color</item>
- 
-        <!-- colorPrimaryDark is used for the status bar -->
-        <item name="colorPrimaryDark">@color/lollipop_dark_primary_color</item>
- 
-        <!-- colorAccent is used as the default value for colorControlActivated
-             which is used to tint widgets -->
-
-        <item name="colorAccent">@color/accentColor</item>
-        
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-    	<item name="android:statusBarColor">@color/lollipop_dark_primary_color</item>
-    	<item name="android:windowTranslucentStatus">false</item>
     </style>
     
     <style name="NavDrawerAccountInfoText">
@@ -85,6 +49,7 @@
         <item name="colorAccent">@color/accentColor</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:background">@color/white</item>
+        <item name="colorControlNormal">@color/text_secondary</item>
     </style>
     
 </resources>
