--- a/res/layout-v21/activity_folder_link.xml
+++ b/res/layout-v21/activity_folder_link.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/folder_link_fragment_container"
     android:fitsSystemWindows="true"
     android:background="@color/fragment_background"
     tools:context=".FolderLinkActivityLollipop" >
