Feature #2813 - Contact Properties Collapsing Toolbar

--- a/res/layout-v21/fragment_contact_properties.xml
+++ b/res/layout-v21/fragment_contact_properties.xml
@@ -39,7 +39,7 @@
     </RelativeLayout>
     -->
 
-    <RelativeLayout
+<!--     <RelativeLayout
         android:id="@+id/contact_image_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
@@ -60,7 +60,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
     </RelativeLayout>
-
+-->
     <!--
     	<TextView
             android:id="@+id/contact_properties_initial_letter"
