--- a/res/layout-v21/activity_main_contact_properties.xml
+++ b/res/layout-v21/activity_main_contact_properties.xml
@@ -1,4 +1,80 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="#ffffff"
+    android:id="@+id/contact_properties_main_activity_layout">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/contact_properties_app_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
+        android:fitsSystemWindows="true">
+        
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/contact_properties_collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp"
+            android:fitsSystemWindows="true">
+            
+            <RelativeLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:fitsSystemWindows="true"
+	            app:layout_collapseMode="parallax"
+	            android:background="@color/lollipop_primary_color" >
+	            
+                <TextView
+		            android:id="@+id/contact_properties_toolbar_initial_letter"
+		            android:layout_width="wrap_content"
+		   			android:layout_height="wrap_content"
+		   			android:layout_centerInParent="true"
+		   			android:paddingBottom="5dp" />
+	
+	            <ImageView
+	                android:id="@+id/contact_properties_toolbar_image"
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:adjustViewBounds="true"
+	                android:src="@drawable/camera_upload"
+	                android:scaleType="fitCenter" />
+	        </RelativeLayout>
+ 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/contact_properties_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin" />
+ 
+        </android.support.design.widget.CollapsingToolbarLayout>
+ 
+ 	</android.support.design.widget.AppBarLayout>
+ 	
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/contact_properties_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="#ffffff">
+        
+        <FrameLayout
+	        android:id="@+id/fragment_container_contact_properties"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent" />
+        
+	</android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
+<!--  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/contact_properties_main_activity_layout"
@@ -20,3 +96,4 @@
         android:layout_height="match_parent" />
 
 </RelativeLayout>
+ -->
