--- a/res/layout-v21/activity_contactsexplorer.xml
+++ b/res/layout-v21/activity_contactsexplorer.xml
@@ -1,71 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".FileStorageActivity" >
+    tools:context=".ContactsExplorerActivityLollipop" >
     
-    <RelativeLayout
-        android:id="@+id/contacts_explorer_toolbar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_contacts_explorer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/standard_margin" >
-
-        <LinearLayout
-            android:id="@+id/contacts_explorer_button_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:orientation="horizontal" >
-
-            <ImageButton
-                android:id="@+id/contacts_explorer_phone_mega_contacts"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_add_contact"
-                android:src="@drawable/ic_phone" />
-            
-            <ImageButton
-                android:id="@+id/contacts_explorer_add_contact"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_add_contact"
-                android:src="@drawable/ic_add_contact" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/contacts_explorer_window_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/contacts_explorer_button_bar"
-            android:ellipsize="start"
-            android:singleLine="true"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            />
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/contacts_explorer_divider_top"
-        android:layout_width="match_parent"
-        android:layout_height="2dip"
-        android:layout_below="@id/contacts_explorer_toolbar"
-        android:background="@color/mega" />
-
-    <Button
-        android:id="@+id/contacts_explorer_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center" />
-    
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:context=".ContactsExplorerActivityLollipop" />
+  
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contacts_explorer_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/contacts_explorer_button"
-        android:layout_below="@id/contacts_explorer_divider_top" />
+        android:layout_below="@id/toolbar_contacts_explorer"/>
 
 </RelativeLayout>
