--- a/res/layout-v21/activity_file_link.xml
+++ b/res/layout-v21/activity_file_link.xml
@@ -37,6 +37,8 @@
         <TextView
             android:id="@+id/file_link_name"
             android:layout_below="@id/file_link_icon"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -45,7 +47,7 @@
             android:layout_width="fill_parent"
             android:layout_height="1dip"
             android:layout_below="@id/file_link_name"
-            android:background="@color/text_secondary" />
+            android:background="@color/separator_grey"/>
 
         <!-- SIZE LAYOUT -->
 
@@ -62,8 +64,6 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="2dp"
-                android:paddingTop="2dp"
                 android:src="@drawable/info_ic" />
 
             <RelativeLayout
@@ -75,10 +75,8 @@
                     android:id="@+id/file_link_info_menu_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="18dp"
-                    android:paddingTop="7dp"
                     android:text="@string/file_properties_info_size_file"
-                    android:textColor="@color/file_properties_info_menu"
+                    android:textColor="@color/black"
                     android:textStyle="bold" />
 
                 <TextView
@@ -86,8 +84,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/file_link_info_menu_size"
-                    android:paddingLeft="18dp"
-                    android:paddingTop="7dp"
                     android:textColor="@color/file_properties_info_menu" />
             </RelativeLayout>
         </LinearLayout>
@@ -97,23 +93,25 @@
             android:layout_width="fill_parent"
             android:layout_below="@id/file_link_size_layout"
             android:layout_height="1dip"
-            android:background="@color/text_secondary" />
+            android:background="@color/separator_grey"/>
     </RelativeLayout>
-
-    <View
-        android:id="@+id/separator_3"
-        android:layout_width="fill_parent"
-        android:layout_below="@id/file_link_layout"
-        android:layout_height="1dip"
-        android:background="@color/text_secondary" />
 
     <LinearLayout
         android:id="@+id/options_file_link_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/separator_3"
+        android:layout_alignParentBottom="true" 
         android:gravity="right"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" >  
+        
+       <TextView
+            android:id="@+id/file_link_button_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/accentColor"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/file_link_button_import"
@@ -121,19 +119,16 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:gravity="center_vertical|center_horizontal"
-            android:text="@string/general_import"
             android:textColor="@color/accentColor"
             android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/file_link_button_download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="@string/general_download"
-            android:textColor="@color/accentColor"
-            android:textSize="14sp" />
     </LinearLayout>
+    
+   <View
+        android:id="@+id/separator_3"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_above="@id/options_file_link_layout"
+        android:background="@color/separator_grey" />
 
 </RelativeLayout>
