--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,6 +3,7 @@
 	<color name="pressed_mega">#CCcc0000</color>
     <color name="button_text">#ffffff</color>
     <color name="text_secondary">#7a7a7a</color>
+    <color name="separator_grey">#c0c0c0</color>
     <color name="background">#ffffff</color>
     <color name="background_secondary">#eeeeee</color>
     <color name="mega">#db0605</color>
